[gd_scene load_steps=2 format=3 uid="uid://chjgujd8q2d5f"]

[ext_resource type="Script" uid="uid://bn1va52xbqy0r" path="res://scripts/ui.gd" id="1_script"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 80.0

[node name="CoinsLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "金币: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 59.0
color = Color(0.658824, 0.658824, 0.658824, 0.286275)

[node name="MessagePanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 320.0
offset_bottom = 140.0

[node name="MessageLabel" type="Label" parent="Control/MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "培育属于你的森林"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 150.0
offset_right = 320.0
offset_bottom = 230.0
scale = Vector2(1.44, 1.44)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_font_sizes/font_size = 14
text = "鸟只能生成在树上
花朵和树木可以点击空白区域生成"
autowrap_mode = 2
